objects/APTS_ABB_ItemOrderSystemMapping__c.object
<CustomObject>
    <description>This object is used to find out Order Management System (OMS/BOL/SPINE/ERP LN) based on BAL ID.</description>
    <fields>
        <fullName>APTS_BAL_ID__c</fullName>
        <description>This field is unique identified for a product and its related factory where this product can be configure or relate to</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is unique identified for a product and its related factory where this product can be configure or relate to</inlineHelpText>
        <label>BAL ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Manual_Configuration_Send__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To indicate whether Manual Configured Product should be send to Ordering System</description>
        <inlineHelpText>To indicate whether Manual Configured Product should be send to Ordering System</inlineHelpText>
        <label>Manual Configuration Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Ordering_System__c</fullName>
        <description>Order System related to BAL ID</description>
        <inlineHelpText>Order System related to BAL ID</inlineHelpText>
        <label>Ordering System</label>
        <picklist>
            <picklistValues>
                <fullName>OMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP_LN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Production_Unit__c</fullName>
        <label>Production Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Factory_Unit__c</fullName>
        <description>Constant value that will be included in the eBookOrder</description>
        <inlineHelpText>Constant value that will be included in the eBookOrder</inlineHelpText>
        <label>Sales Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Technical_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate whether to request technical data from CCI for eBookOrder</description>
        <inlineHelpText>To indicate whether to request technical data from CCI for eBookOrder</inlineHelpText>
        <label>Technical Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Terms_And_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate whether to send T&amp;C in the request of eBookOrder</description>
        <inlineHelpText>To indicate whether to send T&amp;C in the request of eBookOrder</inlineHelpText>
        <label>Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Product_Number__c</fullName>
        <label>Custom Product Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Free text</description>
        <inlineHelpText>Free text</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>internal_order_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to enable the internal order</description>
        <inlineHelpText>Field to enable the internal order</inlineHelpText>
        <label>internal order enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Item Order System Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_BAL_ID__c</columns>
        <columns>APTS_Ordering_System__c</columns>
        <columns>APTS_Sales_Factory_Unit__c</columns>
        <columns>APTS_Technical_Data__c</columns>
        <columns>APTS_Terms_And_Conditions__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>APTS_BAL_ID__c</columns>
        <columns>APTS_Ordering_System__c</columns>
        <columns>APTS_Sales_Factory_Unit__c</columns>
        <columns>Description__c</columns>
        <columns>APTS_Terms_And_Conditions__c</columns>
        <columns>APTS_Technical_Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OSM-{0000000000}</displayFormat>
        <label>Order System Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Order System Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>